--- a/AIE21038_AISP Lab8.ipynb
+++ b/AIE21038_AISP Lab8.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "id": "bc590a7e-09a3-43a1-b3d2-cdf94d5817e4",
    "metadata": {},
-   "source": [
-    "### BL.EN.U4AIE210 Balam Ruchith balaji"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -205,7 +203,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the audio file path\n",
-    "audio_file = \"Lab08.mp3\"\n",
+    "audio_file = \"Answering.mp3\"\n",
     "\n",
     "# Plot the signals\n",
     "plot_signals(audio_file)\n",
@@ -271,7 +269,7 @@
     "import librosa\n",
     "\n",
     "# Get a temporary directory where you have write permissions\n",
-    "custom_temp_dir =  r\"C:\\Users\\SRAVAN\\Desktop\\AI\\Sem-6\\AI Speech\\Lab08\\Report\"\n",
+    "custom_temp_dir =  r\"C:\\Users\\hari\\Desktop\\SEM 6\\AISp\"\n",
     "\n",
     "# Function to segment phonemes for a target word in transcription\n",
     "def segment_phonemes(transcription, target_word):\n",
@@ -377,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
