--- a/AIE21038_AISP Lab8.ipynb
+++ b/AIE21038_AISP Lab8.ipynb
@@ -347,7 +347,7 @@
    ],
    "source": [
     "import IPython.display as ipd \n",
-    "ipd.display(ipd.Audio(r\"C:\\Users\\SRAVAN\\Desktop\\AI\\Sem-6\\AI Speech\\Lab08\\Report\\bharat_speech.wav\"))"
+    "ipd.display(ipd.Audio(r\"C:\\Users\\Hari\\Desktop\\AI\\Sem-6\\AI Speech\\Lab08\\Report\\bharat_speech.wav\"))"
    ]
   },
   {
